# HDR-Render

./: .gitignore  CMakeLists.txt  README.md  highDefinitionRender.cpp  highDynamicRange.cpp  main.cpp
.cache/clangd/index/: AlignedBox.h.371D4C1FEF68DE56.idx  AlignedBox.h.5ABACD7E24D24C6B.idx  AmbiVector.h.B51CCB8389F4B629.idx  AmbiVector.h.DD47918ED015C7A0.idx  Amd.h.93E316822A1A9FC4.idx  Amd.h.F5BB4D214325E694.idx  AngleAxis.h.56FAB34ED63948D4.idx  AngleAxis.h.6EA069281BE7B2A0.idx  Array.h.65F96A4CCB0C8B65.idx  Array.h.83E0DA6310AF1DDA.idx  ArrayBase.h.04CBDF79833086AE.idx  ArrayBase.h.CCE26230FBB3BA59.idx  ArrayCwiseBinaryOps.h.ACF525CA42E75FA7.idx  ArrayCwiseBinaryOps.h.D192543FB0EC7B3B.idx  ArrayCwiseUnaryOps.h.2F49F4E3CA28EE69.idx  ArrayCwiseUnaryOps.h.8A11452CB07B9D6E.idx  ArrayWrapper.h.0834B8FB2385779A.idx  ArrayWrapper.h.12B70163FAD9B5E3.idx  Assign.h.0165563227A2FFDD.idx  Assign.h.C281C121A0C8C43C.idx  AssignEvaluator.h.1DA481F150B5FF16.idx  AssignEvaluator.h.BDB702067FD1CA70.idx  AssignmentFunctors.h.F028E06025FA1BCA.idx  AssignmentFunctors.h.F0C6D946AAD49E63.idx  BDCSVD.h.0506494C17CE31AF.idx  BDCSVD.h.CDC925082EBA2796.idx  BandMatrix.h.0AD715560CF4206F.idx  BandMatrix.h.F51DF04156C44D70.idx  BasicPreconditioners.h.7D75D4E128A59221.idx  BasicPreconditioners.h.9AD31805364BF838.idx  BiCGSTAB.h.36F74845442C33A4.idx  BiCGSTAB.h.4146EE75F394329A.idx  BinaryFunctors.h.7854741E4798C61A.idx  (+1180 more)
include/: HighDynamicRange.h  easyEXIF.h  imageHandler.h
lib/imageHandling/: easyEXIF.cpp  easyEXIF.h  imageHandler.cpp
src/: HighDynamicRange.cpp  imageHandler.cpp
(+2 files in other folders)
