cmake_minimum_required(VERSION 3.8)
project(HighDynamicRangerRender)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( highDynamicRange highDynamicRange.cpp lib/EasyExif/exif.cpp)
target_link_libraries( highDynamicRange ${OpenCV_LIBS})
target_compile_features( highDynamicRange PRIVATE cxx_std_17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
